# 3GPP-Everything

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260517_0737_9cf40059f3b1_init_schema.py  20260518_0243_a1b2c3d4e5f6_add_message_status.py
backend/app/: main.py
backend/app/agent/: __init__.py  checkpoint.py  deps.py  graph.py  langfuse_handler.py  not_found_phrases.py  state.py
backend/app/api/: health.py
backend/app/core/: __init__.py  audit.py  auth.py  config.py  errors.py  logging.py  ratelimit.py
backend/app/db/: __init__.py  base.py  models.py
backend/app/llm/: __init__.py  litellm_client.py  pricing.py
backend/app/retrieval/: __init__.py  cache.py  dense.py  hybrid.py  models.py  rerank.py  sparse.py
backend/app/schemas/: admin.py  auth.py  chat.py  checkpoint.py  docs.py  favorites.py  feedback.py  messages.py  notes.py  sessions.py  tools.py  user.py
backend/app/services/: alerts.py  message_preview.py  message_serialize.py  notify.py  session_title.py  task_runner.py  usage.py
backend/app/tools/: __init__.py  glossary.py  params.py  toc.py  web_search.py
backend/scripts/: create_user.py
backend/scripts/dev/: diff_chunks_meta_schema.py  retrieval_ablation.py  smoke_small2big.py
backend/tests/eval/: conftest.py  test_golden_v1.py
backend/tests/integration/: conftest.py
backend/tests/unit/: conftest.py  test_app_factory.py  test_health.py
eval/: __init__.py  cli.py  fact_coverage_judge.py  langfuse_dataset.py  negative_judge.py  not_found_phrases.py  pyproject.toml  ragas_eval.py  runner.py  runner_retrieval.py  settings.py  sse_parser.py
eval/builder/: __init__.py  prompts.py  transform.py
eval/golden/: _template.yaml  v1.handwritten.yaml  v1.yaml
eval/huawei_compare/: CONTEXT.md  README.md  __init__.py  build_intersection.py  collect_a.py  collect_b.py  collect_c.py  compare_eval.py  compare_report.py  gen_prompts.py  gen_questions.py  golden_compare.yaml  golden_to_questions.py  merge_results.py  pairwise_judge.py  r18_intersection_specs.txt  schema.py  smoke_questions.jsonl  telcorag_client.py
eval/huawei_compare/results/: REPORT.md  compare_report.md  questions.jsonl  results.json  scores.json
eval/retrieval/: __init__.py  client.py  metrics.py  retriever.py
eval/scripts/: ablate_ground_truth.py  compute_utilization.py  diagnose_ctx_recall.py  golden_repair_spec_attribution.py  golden_repair_teleqna.py  langfuse_cleanup_and_push.py  m3_sample_golden.py  m6_regression.py  merge_two_runs.py  merge_utilization_into_v7.py  native_mcq_runner.py  prompt_ab_experiment.py  recompute_substring_metrics.py  rejudge_results.py  rescore_noncommittal.py  retry_failed_ragas.py  run_mapreduce_multisection.py  run_mapreduce_multisection_run3.py  run_small2big_ablation.py  sync_handwritten_to_v1.py
eval/teleqna/: __init__.py  filter.py  infer.py  prompts.py  pull.py  teleqna_spec_alias.yaml  whitelist.py
eval/tests/: conftest.py
eval/tests/unit/: test_build_intersection.py  test_builder.py  test_fact_coverage_judge.py  test_filter.py  test_golden_repair_spec_attribution.py  test_golden_repair_teleqna.py  test_huawei_compare_eval.py  test_huawei_compare_gen.py  test_huawei_compare_schema.py  test_infer.py  test_langfuse_dataset.py  test_m6_regression.py  test_metrics.py  test_native_mcq_runner.py  test_negative_judge.py  test_not_found_phrases.py  test_ragas_eval.py  test_rejudge_results.py  test_retriever_offline.py  test_runner.py  test_runner_retrieval.py  test_sample_golden.py  test_settings.py  test_sse_parser.py  test_telcorag_client.py  test_validators_golden.py  test_validators_merger.py  test_validators_stats.py  test_whitelist.py
eval/validators/: __init__.py  golden.py  merger.py  stats.py
ingestion/: .dockerignore  Dockerfile  cli.py  pyproject.toml  rate_limit.py
ingestion/chunker/: __init__.py  atomic_blocks.py  builder.py  figure.py  formula_alt.py  garbage_filter.py  merger.py  models.py  runner.py  section_splitter.py  tokenize_utils.py
ingestion/glossary/: __init__.py  extractor.py  runner.py  writer.py
ingestion/hf_loader/: __init__.py  image_resolver.py  loader.py  manifest_store.py  markdown_parser.py  models.py  runner.py  spec_grouper.py
ingestion/images/: __init__.py  prompts.py  runner.py  vision.py
ingestion/indexer/: __init__.py  bm25_writer.py  embedder.py  models.py  pg_writer.py  pipeline.py  qdrant_writer.py  runner.py
ingestion/scripts/: clause_gap_audit.py  diagnose_38212_chunker.py  diagnose_38212_gap.py  diagnose_38413_gap.py  m2_poc_verify.py  m3_chunk_id_drift.py  poc_fix_pg_only.py  poc_formula_alt_drift.py  poc_prep_38331.py  poc_quality_audit.py  poc_retrieval_smoke.py  poc_verify_chunker_fix.py  vision_e_validate.py  vision_strategy_benchmark.py
ingestion/tests/: conftest.py
ingestion/tests/integration/: test_chunk_real_specs.py  test_hf_loader_smoke.py
ingestion/tests/unit/: test_atomic_blocks.py  test_builder_smoke.py  test_chunk_id_drift.py  test_figure.py  test_formula_alt.py  test_garbage_filter.py  test_garbage_filter_template.py  test_glossary_extractor.py  test_indexer_bm25.py  test_indexer_concurrent.py  test_indexer_embedder.py  test_indexer_multidim.py  test_indexer_pg.py  test_indexer_pipeline.py  test_indexer_qdrant.py  test_loader_helpers.py  test_markdown_parser.py  test_merger.py  test_rate_limit.py  test_section_splitter.py  (+3 more)
(+314 files in other folders)
