[project]
name = "tgpp-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "qdrant-client>=1.11",
  "llama-index>=0.13",
  "llama-index-vector-stores-qdrant>=0.4",
  "llama-index-retrievers-bm25>=0.4",
  "llama-index-readers-docling>=0.3",
  "langchain>=0.3",
  "langchain-openai>=0.2",
  "langgraph>=0.2",
  "langgraph-checkpoint-postgres>=2.0",
  "voyageai>=0.3",
  "tavily-python>=0.5",
  "langfuse>=2.50",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "httpx>=0.27",
  "structlog>=24.1",
  "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ragas>=0.2",
  "pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","RUF"]
# 项目文档与注释采用中文；ruff RUF001/2/3 对中文标点会产生大量噪声，统一关掉。
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["unit", "integration", "eval"]
