[project]
name = "tgpp-ingestion"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "docling>=2.5",
  "langchain>=0.3",
  "langchain-openai>=0.2",
  "qdrant-client>=1.11",
  "httpx>=0.27",
  "structlog>=24.1",
  "tenacity>=9.0",
  "typer>=0.12",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "pyyaml>=6.0",
  "voyageai>=0.3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "black>=24.8",
  "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","RUF"]

[tool.black]
line-length = 100
target-version = ["py311"]
