[project]
name = "tgpp-ingestion"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "docling>=2.5",
  "langchain>=0.3",
  "langchain-openai>=0.2",
  "qdrant-client>=1.11",
  "httpx>=0.27",
  "structlog>=24.1",
  "tenacity>=9.0",
  "typer>=0.12",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "pyyaml>=6.0",
  "voyageai>=0.3",
  "huggingface-hub>=0.26",
  "pillow>=10.4",
  "tiktoken>=0.7",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "redis>=5.0",
  "aiolimiter>=1.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "black>=24.8",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "fakeredis>=2.23",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","RUF"]
# 项目文档与注释采用中文；ruff RUF001/2/3 对中文标点会产生大量噪声，统一关掉。
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# typer.Option 作为参数默认值是官方推荐用法，B008 在此处属误报。
"hf_loader/runner.py" = ["B008", "E501"]
"chunker/runner.py" = ["B008", "E501"]
"images/runner.py" = ["B008", "E501"]
"indexer/runner.py" = ["B008", "E501"]
"cli.py" = ["B008", "E501"]
# scripts/ 是评测/一次性脚本，prompt 字符串长是正常情况
"scripts/*.py" = ["E501"]
# images/prompts.py 中 PROMPT_E_UNIFIED 是长字符串模板
"images/prompts.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
